# src/main/resources/openapi/documentation.yaml
@@ -139,6 +139,25 @@ paths:
         "401":
           description: "Unauthorized"
 
+  /user/me:
+    get:
+      tags:
+        - User
+      summary: "Get current user info"
+      security:
+        - bearerAuth: [ ]
+      responses:
+        "200":
+          description: "User details retrieved successfully"
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserInfoResponse"
+        "401":
+          description: "Unauthorized"
+        "500":
+          description: "Internal server error"
+
   # ==================== ADDRESS ROUTES ====================
   /addresses:
     get:
@@ -913,6 +932,29 @@ components:
         user_update_status:
           type: string
           example: "User updated successfully"
+
+    UserInfoResponse:
+      type: object
+      properties:
+        id:
+          type: string
+          format: uuid
+        name:
+          type: string
+        surname:
+          type: string
+          nullable: true
+        phone:
+          type: string
+        email:
+          type: string
+          format: email
+        birthDate:
+          type: string
+          format: date
+          nullable: true
+        gender:
+          type: string
 
     # ==================== ADDRESS SCHEMAS ====================
     CreateAddressRequest:
